--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="hidden md:flex text-white justify-center items-center gap-4">
                 <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="#"><box-icon color="white" size="27px" name='home'></box-icon>หน้าหลัก</a>
                 <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="pages/main/books.html"><box-icon color="white" size="27px" name='test-tube'></box-icon>คลังหนังสือ</a>
-                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href=""><box-icon color="white" size="27px" name='spreadsheet'></box-icon>ชีทสรุปสอบ</a>
-                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href=""><box-icon color="white" size="27px" name='book-content'></box-icon>สรุปเนื้อหา</a>
+                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="pages/main/test.html"><box-icon color="white" size="27px" name='spreadsheet'></box-icon>เตรียมสอบ</a>
+                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="pages/main/documents.html"><box-icon color="white" size="27px" name='spreadsheet'></box-icon>บทความ</a>
             </div>
             <div id="nav-button" class="block md:hidden text-white flex justify-center items-center gap-5">
                 <box-icon color="white" size="30px" name='menu'></box-icon>
@@ -35,8 +35,8 @@
                 <div class="flex flex-col justify-center items-center text-white">
                     <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="#"><box-icon color="white" size="27px" name='home'></box-icon>หน้าหลัก</a>
                     <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="pages/main/books.html"><box-icon color="white" size="27px" name='test-tube'></box-icon>คลังหนังสือ</a>
-                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href=""><box-icon color="white" size="27px" name='spreadsheet'></box-icon>ชีทสรุปสอบ</a>
-                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href=""><box-icon color="white" size="27px" name='book-content'></box-icon>สรุปเนื้อหา</a>
+                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="pages/main/test.html"><box-icon color="white" size="27px" name='spreadsheet'></box-icon>เตรียมสอบ</a>
+                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="pages/main/documents.html"><box-icon color="white" size="27px" name='book-open'></box-icon>บทความ</a>
                 </div>
                 <div class="flex justify-start items-center gap-2 mt-5 ml-2">
                     <a href=""><box-icon color="white" size="30px" type='logo' name='instagram-alt'></box-icon></a>
@@ -80,6 +80,30 @@
                 <div class="bg-orange-400 w-[100%] h-[4px] mb-7"></div>
                 <div class="swiper news-swiper">
                     <div id="newcomes_main" class="swiper-wrapper p-1"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="bodkwam mt-10 shadow-[0px_0px_3px_2px_rgba(0,_0,_0,_0.1)] p-5 rounded-[10px] lg:ml-6 lg:mr-6">
+            <div class="mb-2 flex items-center gap-10 w-[100%] justify-between">
+                <h1 class="font-bold text-2xl">บทความที่น่าสนใจ</h1>
+                <a class="text-blue-400" href="pages/main/documents.html">ดูทั้งหมด ></a>
+            </div>
+            <div class="bg-orange-400 w-[100%] h-[4px] mb-7 mt-3"></div>
+            <div class="flex flex-wrap gap-3 justify-start items-center">
+                <div class="flex flex-col shadow-[0px_0px_3px_2px_rgba(0,_0,_0,_0.1)] rounded-[10px]">
+                    <div class="p-5 max-w-[500px]">
+                        <img src="../../images/Banners/Math.png" class="rounded-[10px] w-[100%]" alt="">
+                        <div class="mt-4 flex flex-col">
+                            <h1 class="bg-blue-200 inline pl-1 pr-1 rounded-[4px] max-w-[70px] text-center">บทความ</h1>
+                            <h1 class="font-bold text-xl mt-2">สรุปทุกอย่างที่ต้องรู้ก่อนสอบ A-Level 68 คณิต 1, A-Level คณิต 2</h1>
+                            <div class="flex justify-start items-center gap-1 mt-3">
+                                <box-icon color="black" size="24px" name="time-five"></box-icon>
+                                <h1>4 กันยายน 2568</h1>
+                            </div>
+                            <a class="bg-orange-400 p-3 mt-5 rounded-[5px] max-w-[95px] text-center" href="#">ดูเพิ่มเติม</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
