--- a/pages/main/test.html
+++ b/pages/main/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRU E-Books - หนังสือทั้งหมด</title>
+    <title>CRU E-Books - เตรียมสอบ</title>
     <link rel="stylesheet" href="../../style.css">
     <link rel="icon" type="image/png" href="../../images/crulogo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -22,9 +22,9 @@
             </div>
             <div class="hidden md:flex text-white justify-center items-center gap-4">
                 <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../index.html"><box-icon color="white" size="27px" name='home'></box-icon>หน้าหลัก</a>
-                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="#"><box-icon color="white" size="27px" name='test-tube'></box-icon>คลังหนังสือ</a>
-                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../pages/main/test.html"><box-icon color="white" size="27px" name='spreadsheet'></box-icon>เตรียมสอบ</a>
-                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../pages/main/documents.html"><box-icon color="white" size="27px" name='spreadsheet'></box-icon>บทความ</a>
+                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../pages/main/books.html"><box-icon color="white" size="27px" name='test-tube'></box-icon>คลังหนังสือ</a>
+                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="#"><box-icon color="white" size="27px" name='spreadsheet'></box-icon>เตรียมสอบ</a>
+                <a class="p-3 hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../pages/main/documents.html"><box-icon color="white" size="27px" name='book-open'></box-icon>บทความ</a>
             </div>
             <div id="nav-button" class="block md:hidden text-white flex justify-center items-center gap-5">
                 <box-icon color="white" size="30px" name='menu'></box-icon>
@@ -34,9 +34,9 @@
             <div class="p-3">
                 <div class="flex flex-col justify-center items-center text-white">
                     <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../index.html"><box-icon color="white" size="27px" name='home'></box-icon>หน้าหลัก</a>
-                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="#"><box-icon color="white" size="27px" name='test-tube'></box-icon>คลังหนังสือ</a>
-                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../pages/main/test.html"><box-icon color="white" size="27px" name='spreadsheet'></box-icon>เตรียมสอบ</a>
-                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="pages/main/documents.html"><box-icon color="white" size="27px" name='book-open'></box-icon>บทความ</a>
+                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../pages/main/books.html"><box-icon color="white" size="27px" name='test-tube'></box-icon>คลังหนังสือ</a>
+                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="#"><box-icon color="white" size="27px" name='spreadsheet'></box-icon>เตรียมสอบ</a>
+                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../pages/main/documents.html"><box-icon color="white" size="27px" name='book-open'></box-icon>บทความ</a>
                 </div>
                 <div class="flex justify-start items-center gap-2 mt-5 ml-2">
                     <a href=""><box-icon color="white" size="30px" type='logo' name='instagram-alt'></box-icon></a>
@@ -49,15 +49,15 @@
     </nav>
     <main class="mt-30 ml-3 mr-3 md:ml-36 md:mr-36 lg:ml-64 lg:mr-64 flex lg:justify-center lg:items-center flex-col">
         <div class="lg:shadow-[0px_0px_3px_2px_rgba(0,_0,_0,_0.1)] lg:bg-white lg:rounded-[10px] lg:p-7 lg:w-[900px]">
-            <h1 class="font-bold text-3xl mb-5">คณิตศาสตร์</h1>
+            <h1 class="font-bold text-3xl mb-5">A-Level</h1>
             <div class="bg-orange-400 w-[100%] h-[4px] mb-7"></div>
-            <div id="math_div" class="all-books flex flex-wrap gap-3 justify-start items-center"></div>
+            <div id="alevel_div" class="all-books flex flex-wrap gap-3 justify-start items-center"></div>
         </div>
 
         <div class="mt-24 lg:shadow-[0px_0px_3px_2px_rgba(0,_0,_0,_0.1)] lg:bg-white lg:rounded-[10px] lg:p-7 lg:w-[900px]">
-            <h1 class="font-bold text-3xl mb-5">วิทยาศาสตร์</h1>
+            <h1 class="font-bold text-3xl mb-5">PAT 1</h1>
             <div class="bg-orange-400 w-[100%] h-[4px] mb-7"></div>
-            <div id="sci_div" class="all-books flex flex-wrap gap-3 justify-start items-center"></div>
+            <div id="pat_div" class="all-books flex flex-wrap gap-3 justify-start items-center"></div>
         </div>
     </main>
 
@@ -85,7 +85,7 @@
 
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="../../scripts/index.js"></script>
-    <script src="../../scripts/utils/all_books.js"></script>
+    <script src="../../scripts/utils/test_books.js"></script>
     <script src="scripts/swipers/swiper.js"></script>
 </body>
 </html>
