--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="flex flex-wrap gap-3 justify-start items-center">
                 <div class="flex flex-col shadow-[0px_0px_3px_2px_rgba(0,_0,_0,_0.1)] rounded-[10px]">
                     <div class="p-5 max-w-[500px]">
-                        <img src="../../images/Banners/Math.png" class="rounded-[10px] w-[100%]" alt="">
+                        <img src="images/Banners/Math.png" class="rounded-[10px] w-[100%]" alt="">
                         <div class="mt-4 flex flex-col">
                             <h1 class="bg-blue-200 inline pl-1 pr-1 rounded-[4px] max-w-[70px] text-center">บทความ</h1>
                             <h1 class="font-bold text-xl mt-2">สรุปทุกอย่างที่ต้องรู้ก่อนสอบ A-Level 68 คณิต 1, A-Level คณิต 2</h1>
@@ -137,4 +137,5 @@
     <script src="scripts/index.js"></script>
     <script src="scripts/swipers/swiper.js"></script>
 </body>
+
 </html>
