--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <box-icon color="black" size="24px" name="time-five"></box-icon>
                                 <h1>4 กันยายน 2568</h1>
                             </div>
-                            <a class="bg-orange-400 p-3 mt-5 rounded-[5px] max-w-[95px] text-center" href="#">ดูเพิ่มเติม</a>
+                            <a class="bg-orange-400 p-3 mt-5 rounded-[5px] max-w-[95px] text-center" href="pages/sub/documents/ALevelMath.html">ดูเพิ่มเติม</a>
                         </div>
                     </div>
                 </div>
@@ -139,3 +139,4 @@
 </body>
 
 </html>
+
