--- a/pages/main/books.html
+++ b/pages/main/books.html
@@ -36,7 +36,7 @@
                     <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../index.html"><box-icon color="white" size="27px" name='home'></box-icon>หน้าหลัก</a>
                     <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="#"><box-icon color="white" size="27px" name='test-tube'></box-icon>คลังหนังสือ</a>
                     <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../pages/main/test.html"><box-icon color="white" size="27px" name='spreadsheet'></box-icon>เตรียมสอบ</a>
-                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="pages/main/documents.html"><box-icon color="white" size="27px" name='book-open'></box-icon>บทความ</a>
+                    <a class="p-3 w-[100%] hover:bg-orange-300 rounded-[7px] flex gap-2 justify-start items-center" href="../../pages/main/documents.html"><box-icon color="white" size="27px" name='book-open'></box-icon>บทความ</a>
                 </div>
                 <div class="flex justify-start items-center gap-2 mt-5 ml-2">
                     <a href=""><box-icon color="white" size="30px" type='logo' name='instagram-alt'></box-icon></a>
