--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             <div class="swiper-wrapper">
                 <img class="swiper-slide" src="./images/Banners/Math.png" alt="">
                 <img class="swiper-slide" src="./images/Banners/Science.png" alt="">
-                <img class="swiper-slide" src="./images/Banners/Social.png" alt="">
+                <img class="swiper-slide" src="./images/Books/thai.png" alt="">
+                <img class="swiper-slide" src="./images/Books/english.png" alt="">
             </div>
             <div class="swiper-pagination"></div>
             <div class="autoplay"></div>
         </div>
 
         <div class="flex flex-col justify-center md:flex-row md:gap-10 md:ml-6 md:mr-6">
-            <!-- Interesting Topics -->
             <div class="mt-10 shadow-[0px_0px_3px_2px_rgba(0,_0,_0,_0.1)] p-5 rounded-[10px] md:w-[50%]">
                 <div class="mb-2 flex items-center gap-10 w-[100%] justify-between">
                     <h1 class="font-bold text-2xl">เรื่องน่าอ่าน</h1>
@@ -70,8 +70,6 @@
                     <div id="interesting_main" class="swiper-wrapper p-1"></div>
                 </div>
             </div>
-
-            <!-- New Topics -->
             <div class="mt-10 shadow-[0px_0px_3px_2px_rgba(0,_0,_0,_0.1)] p-5 rounded-[10px] md:w-[50%]">
                 <div class="mb-2 flex items-center gap-10 w-[100%] justify-between">
                     <h1 class="font-bold text-2xl">เรื่องใหม่ๆ</h1>
@@ -93,7 +91,7 @@
             <div class="flex flex-wrap gap-3 justify-start items-center">
                 <div class="flex flex-col shadow-[0px_0px_3px_2px_rgba(0,_0,_0,_0.1)] rounded-[10px]">
                     <div class="p-5 max-w-[500px]">
-                        <img src="images/Banners/Math.png" class="rounded-[10px] w-[100%]" alt="">
+                        <img src="images/Books/math1.png" class="rounded-[10px] w-[100%]" alt="">
                         <div class="mt-4 flex flex-col">
                             <h1 class="bg-blue-200 inline pl-1 pr-1 rounded-[4px] max-w-[70px] text-center">บทความ</h1>
                             <h1 class="font-bold text-xl mt-2">สรุปทุกอย่างที่ต้องรู้ก่อนสอบ A-Level 68 คณิต 1, A-Level คณิต 2</h1>
@@ -137,6 +135,4 @@
     <script src="scripts/index.js"></script>
     <script src="scripts/swipers/swiper.js"></script>
 </body>
-
 </html>
-
